# boids-opengl

./: CMakeLists.txt  README.md  boid.cpp  boid.h  main.cpp
